--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-google-maps/api": "^2.18.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "google-map-react": "^2.2.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
