--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
     "@react-google-maps/api": "^2.18.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
