--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@react-google-maps/api": "^2.18.1",
+    "@web3forms/react": "^1.1.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "google-map-react": "^2.2.1",
@@ -19,6 +20,7 @@
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.0",
     "swiper": "^9.2.4"
   },
   "devDependencies": {
