--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@heroicons/react": "^2.0.18",
     "@react-google-maps/api": "^2.18.1",
     "@web3forms/react": "^1.1.3",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "google-map-react": "^2.2.1",
+    "lucide-react": "^0.256.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
-    "swiper": "^9.2.4"
+    "swiper": "^9.2.4",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
