Updated maps and event

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_WEB_FORM_API_KEY=6968c136-04ef-4bff-b8bb-b029d2cfb355
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyBjBmjnxX5gF6jimkf5cUSYgNuLaKlE2v0
