--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-google-maps/api": "^2.19.3",
+    "@vercel/analytics": "^1.3.1",
     "@web3forms/react": "^1.1.3",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
