--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -24,6 +25,7 @@
     "google-map-react": "^2.2.1",
     "lucide-react": "^0.256.0",
     "next": "13.2.4",
+    "next-sitemap": "^4.2.3",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-day-picker": "^8.8.0",
